@@ -1,11 +1,0 @@
-The X Rendering Extension introduces digital image composition as the
-foundation of a rendering model within the X Window System.  Rendering
-geometric figures is accomplished by client-side tessellation into either
-triangles or trapezoids.  Text is drawn by loading glyphs into the server
-and rendering sets of them.
-
-This package contains the client library for connecting to a Xserver that
-supports the Xrender extension.
-
-This package is for use with older native X11 versions. The modular
-X.org version is in x11/libXrender.
