@@ -1,4 +1,0 @@
-@comment $NetBSD: PLIST,v 1.6 2004/09/22 08:09:57 jlam Exp $
-include/X11/extensions/Xrender.h
-lib/libXrender.la
-lib/pkgconfig/xrender.pc
